package Services;

public interface TypeClean {

    float getCost();
}
